character table pagination done

--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,15 @@
   color: #61dafb;
 }
 
+main {
+  padding: 2rem;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
